feat: fix payment form.

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -49,5 +49,7 @@
 	"plan_details_plus": "<p>私たちは、Swap+プランをご紹介できることを誇りに思います – 自信と安心を持ってデバイスを保護するための柔軟で手頃な方法です。このサービスは、最初の週を特別割引料金で始めて、セキュリティ、シンプルさ、そして真の価値を提供するように設計されています。</p><p>Swap+プランは週19.99€で利用でき、最初の週は特別導入価格9.99€です。このプランは1台のデバイスをカバーし、総額で最大400 USDの価値があります。カバレッジには、偶発的な損傷、画面のひび割れ、電源やバッテリーの問題に対する保護が含まれています。</p><p>各加入者は年間1回のデバイス交換の権利があります。カバレッジが有効になるまで30日間の待機期間があることにご注意ください。待機期間が過ぎると、カバーされた交換を要求する資格が完全に得られます。</p><p>最初の割引週の後、お客様のサブスクリプションは通常の週額19.99€で自動的に更新されます。メンバーアカウントを通じて、またはメールやチャットでサポートチームに連絡して、いつでもキャンセルできます。また、各更新の3日前にリマインダーを送信し、追加料金やペナルティなしで更新サイクルを一時停止またはスキップすることも自由です。</p><p>処理された支払いは返金不可です。お客様のメンバーシップ特典はキャンセルまで有効です。貴重なメンバーとして、高優先度のサポートとエクスクルーシブなサービスやプロモーションへの継続的なアクセスを受け取ります。</p>",
 	"plan_details_premium": "<p>これまでで最も包括的な保護をご紹介します – Premium Swapプラン。一流のサービスと安心を求めるユーザーのために構築されたこのプランは、業界をリードする特典と迅速な応答時間で、複数のデバイスにわたる完全な機能のカバレッジを提供します。</p><p>Premium Swapプランは週39.99€で利用でき、最初の週は特別導入価格29.99€です。このプレミアムサービスは最大5台のデバイスをカバーし、合計で最大1000 USDの価値があります。</p><p>カバレッジには、承認された交換のための翌日配送、および有効な警察報告書が提出されることを条件とした盗難や紛失に対する保護が含まれています。複数のデバイスに依存し、迅速で信頼性の高いサポートを期待するプロフェッショナル、家族、テクノロジー愛好家のために設計されています。</p><p>このプランでは年間3回のデバイス交換の資格があります。他のプランとは異なり、Premium Swapはわずか15日間の短い待機期間があり、その後完全な保護と特典が有効になります。</p><p>最初の割引週の後、お客様のプランは標準の週額39.99€で自動的に更新されます。オンラインアカウントを通じて、またはメールやチャットでサポートチームに連絡して、いつでもキャンセルできます。各更新の3日前にリマインダーを送信し、追加料金やペナルティなしで今後の更新サイクルを一時停止またはスキップすることもできます。</p><p>ご注意：処理された支払いは返金不可です。お客様のPremium Swap特典はキャンセルまで完全に有効です。プレミアムメンバーとして、ファストトラックサービス、エクスクルーシブなオファー、デバイスの完全な保護を受け取ります。</p>",
 	"continue": "続行",
-	"back": "戻る"
+	"back": "戻る",
+	"error_payment": "支払いエラー",
+	"close": "閉じる"
 }
