--- a/locales/ko.json
+++ b/locales/ko.json
@@ -49,5 +49,7 @@
 	"plan_details_plus": "<p>우리는 Swap+ 플랜을 소개할 수 있어 자랑스럽습니다 – 자신감과 마음의 평화로 기기를 보호하는 유연하고 저렴한 방법입니다. 이 서비스는 첫 주를 특별 할인 요금으로 시작하여 보안, 단순성 및 진정한 가치를 제공하도록 설계되었습니다.</p><p>Swap+ 플랜은 주당 19.99€로 이용 가능하며, 첫 주는 특별 도입가 9.99€입니다. 이 플랜은 총 단위에서 최대 400 USD 가치의 1개 기기를 커버합니다. 커버리지에는 우발적 손상, 화면 균열 및 전원 또는 배터리 문제에 대한 보호가 포함됩니다.</p><p>각 구독자는 연간 1회 기기 교환 권리가 있습니다. 커버리지가 활성화되기 전에 30일 대기 기간이 있다는 점에 유의하시기 바랍니다. 대기 기간이 지나면 보장된 교환을 요청할 자격을 완전히 갖게 됩니다.</p><p>첫 할인 주 후, 구독은 정기 주간 요금 19.99€로 자동 갱신됩니다. 회원 계정을 통해 또는 이메일이나 채팅으로 지원팀에 연락하여 언제든지 취소할 수 있습니다. 또한 각 갱신 3일 전에 알림을 보내며, 추가 비용이나 벌금 없이 갱신 주기를 일시 중지하거나 건너뛸 수 있습니다.</p><p>처리된 후에는 결제가 환불되지 않습니다. 회원 혜택은 취소까지 활성 상태를 유지합니다. 소중한 회원으로서 고우선순위 지원과 독점 서비스 및 프로모션에 대한 지속적인 액세스를 받게 됩니다.</p>",
 	"plan_details_premium": "<p>지금까지 가장 포괄적인 보호를 소개합니다 – Premium Swap 플랜. 최고급 서비스와 마음의 평화를 요구하는 사용자를 위해 구축된 이 플랜은 업계 선도 혜택과 빠른 응답 시간으로 여러 기기에 걸친 완전한 기능 커버리지를 제공합니다.</p><p>Premium Swap 플랜은 주당 39.99€로 이용 가능하며, 첫 주는 특별 도입가 29.99€입니다. 이 프리미엄 서비스는 최대 5개 기기를 커버하며 총 가치는 최대 1000 USD입니다.</p><p>커버리지에는 승인된 교환을 위한 익일 배송과 유효한 경찰 보고서가 제출되는 경우 도난 및 분실 보호가 포함됩니다. 여러 기기에 의존하고 빠르고 신뢰할 수 있는 지원을 기대하는 전문가, 가족 및 기술 애호가를 위해 설계되었습니다.</p><p>이 플랜에서는 연간 3회 기기 교환 자격이 있습니다. 다른 플랜과 달리 Premium Swap은 단 15일의 짧은 대기 기간이 있으며, 그 후 완전한 보호와 혜택이 활성화됩니다.</p><p>첫 할인 주 후, 플랜은 표준 주간 요금 39.99€로 자동 갱신됩니다. 온라인 계정을 통해 또는 이메일이나 채팅으로 지원팀에 연락하여 언제든지 취소할 수 있습니다. 각 갱신 3일 전에 알림을 보내며, 추가 비용이나 벌금 없이 향후 갱신 주기를 일시 중지하거나 건너뛸 수 있습니다.</p><p>참고: 처리된 후에는 결제가 환불되지 않습니다. Premium Swap 혜택은 취소까지 완전히 활성 상태를 유지합니다. 프리미엄 회원으로서 빠른 서비스, 독점 오퍼 및 기기의 완전한 보호를 받게 됩니다.</p>",
 	"continue": "계속",
-	"back": "뒤로"
+	"back": "뒤로",
+	"error_payment": "결제 오류",
+	"close": "닫기"
 }
