--- a/locales/zh.json
+++ b/locales/zh.json
@@ -49,5 +49,7 @@
 	"plan_details_plus": "<h4>Swap+</h4><p>我们很自豪地推出我们的 Swap+ 计划 – 这是一种灵活且经济实惠的方式，让您可以放心、安心地保护您的设备。这项服务旨在为您提供安全、简单和真正的价值，从您的第一周开始就享受特别折扣价。</p><p>Swap+ 计划每周收费 19.99 欧元，第一周的特别介绍价为 9.99 欧元。该计划涵盖 1 台设备，总价值最高为 400 美元。您的保障范围包括防止意外损坏、屏幕破裂以及电源或电池问题。</p><p>每位订户每年有权更换 1 台设备。请注意，保障生效前有 30 天的等待期。等待期过后，您将完全有资格申请保障范围内的更换。</p><p>在您的第一个折扣周之后，您的订阅将自动以每周 19.99 欧元的正常费率续订。您可以随时通过您的会员帐户或通过电子邮件或聊天联系我们的支持团队来取消。我们还会在每次续订前三天向您发送提醒，您可以随时暂停或跳过任何续订周期，无需支付额外费用或罚款。</p><p>已处理的付款不予退还。您的会员权益在取消前一直有效。作为尊贵的会员，您将获得高优先级的支持，并持续享受独家服务和促销活动。</p>",
 	"plan_details_premium": "<h4>Premium Swap</h4><p>推出我们迄今为止最全面的保护计划 — Premium Swap 计划。该计划专为要求顶级服务和安心的用户而设计，为多台设备提供功能齐全的保障，并提供行业领先的优势和快速的响应时间。</p><p>Premium Swap 计划每周收费 39.99 欧元，第一周的特别介绍价为 29.99 欧元。这项高级服务最多可覆盖 5 台设备，总价值高达 1000 美元。</p><p>保障范围包括批准更换的隔夜送货，以及盗窃和丢失保护，前提是提交有效的警方报告。它专为依赖多台设备并期望获得快速、可靠支持的专业人士、家庭和技术爱好者而设计。</p><p>根据此计划，您每年有权更换 3 台设备。与其他计划不同，Premium Swap 的等待期很短，只有 15 天，之后全面保护和权益将生效。</p><p>在第一个折扣周之后，您的计划将自动以每周 39.99 欧元的标准费率续订。您可以随时通过您的在线帐户或通过电子邮件或聊天联系我们的支持团队来取消。我们会在每次续订前三天发送提醒，您可以暂停或跳过任何即将到来的续订周期，无需支付额外费用或罚款。</p><p>请注意：已处理的付款不予退还。您的 Premium Swap 权益在取消前完全有效。作为高级会员，您将获得加速服务、独家优惠以及对您设备的全方位保护。</p>",
 	"continue": "继续",
-	"back": "返回"
+	"back": "返回",
+	"error_payment": "支付错误",
+	"close": "关闭"
 }
